--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,10 @@ mkl_random
 numexpr 
 numpy 
 packaging==24.2
-pandas
+pandas==3.11
 python-dateutil 
 pytz 
-scikit-learn
+scikit-learn==1.3.0
 scipy 
 six
 threadpoolctl 
